# Foundations_of_HPC_2022_final_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  dgemm.c  dgemm_epyc.sh  dgemm_epyc128.sh  dgemm_epyc64.sh  dgemm_mkl_epyc.sh  dgemm_mkl_epyc_optimized.sh  dgemm_oblas_epyc.sh  dgemm_oblas_epyc.xlsm  dgemm_oblas_epyc_optimized.sh  dgemm_size.xlsx  dgemm_thin.sh  dgemm_thin12.sh  dgemm_thin24.sh  evolution_ordered.c  evolution_static.c  evolution_wave.c  evolution_whiteblack.c  files.io.h  files_io.c  files_io.h  gameoflife.c  gameoflife.h  gemm.c  gemm_cores.xlsm  gemm_cores.xlsx  gemm_epyc.sh  gemm_policy_epyc.sh  gemm_testblis_epyc.sh  gemm_thin.sh  initialize.c  initialize.h  iterate_ordered.c  iterate_static.c  iterate_wave.c  iterate_whiteblack.c  merge_images.sh  (+40 more)
exercise1/: .gitignore  README.md  calc double size squared matrix.xlsx  evolution_ordered.c  evolution_wave.c  evolution_whiteblack.c  gameoflife.h  new_playground.c  scalability_MPI_thin.xlsx  scalability_OMP.xlsx  scale_omp_2.sh  scale_omp_3.sh  scale_omp_4.sh  scale_omp_5.sh  scale_omp_thin.sh
exercise2/: .gitignore  Makefile  README.md  average.py  dgemm.c  dgemm_epyc128.sh  dgemm_thin24.sh  epyc.txt  gemm_cores.xlsm  sgemm_epyc128.sh  sgemm_thin24.sh  strong_sgemm_thin12.sh  strong_sgemm_thin24.sh
orfeo/: dgemm_blis.x  dgemm_epyc.sh  dgemm_mkl.x  dgemm_mkl_optimized.x  dgemm_oblas.x  dgemm_oblas_epyc_optimized.sh  dgemm_oblas_optimized.x  sgemm_blis.x  sgemm_mkl.x  sgemm_mkl_optimized.x  sgemm_oblas.x  sgemm_oblas_optimized.x  testdatetime.sh  testsbatch.sh
test/: Makefile  dgemm_epyc (3).sh  (+17 more)
(+1363 files in other folders)
